# GRLNet

./: .gitignore  AGENTS.md  CITATION.cff  MODEL_CARD.md  README.md  hubconf.py  pyproject.toml
docs/: api.md  architecture.md  concepts.md  datasets.md  gold_improvement_recommendations.md  grlnet_convlstm_cell.tex  grlnet_diagram_academic.tex  grlnet_diagram_engineering.tex  grlnet_stabhrec40.drawio.xml  grlnet_stabhrec40_singlelayer_tikz.tex  inference.md  optimization_v2_plan.md  stabhrec40_cell_diagnostics.json  stabhrec40_gradient_flow.json  training.md
examples/: basic_inference.py  basic_training.py  datasets_overview.py  replace_classifier.py  transfer_learning.py
recipes/: __init__.py
recipes/imagenet/: README.md  __init__.py  checkpointing.py  config.py  data_pipeline.py  dist.py  engine.py  train.py  train_stabhrec40.py
recipes/imagenet/configs/: grl_a100_single_20e.yaml  grl_a100_single_50e.yaml  (+8 more)
scripts/: eval_imagenet.py  eval_reference.py  prepare_imagenet_layout.py  run_one_epoch_benchmark.py  train_imagenet.py  train_reference.py
slurm/: gpu_probe_hydra_gpu1.slurm  gpu_probe_hydra_gpu2.slurm  gpu_probe_hydra_gpu3.slurm  one_epoch_cpu_ram.slurm  one_epoch_gpu_a100_80gb.slurm  one_epoch_gpu_t4.slurm  reference_iruo_eval.slurm  reference_iruo_train.slurm
src/grl_model/: __init__.py
src/grlnet/: __init__.py  inference.py  transforms.py
stabhrec40_a100_single_50e/: progress.jsonl  resolved_config.yaml  run_meta.json  stabhrec40_a100_single_50e_history.json  train_summary.json
stabhrec40_a100_single_50e~/: progress.jsonl  run_meta.json  stabhrec40_a100_single_50e_history.json  train_summary.json
stabhrec40_a100_single_50e~~/: progress.jsonl  resolved_config.yaml  run_meta.json  stabhrec40_a100_single_50e_history.json
tests/: test_api.py  test_lite_api.py
(+40 files in other folders)
