[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grl-track-classifier"
version = "0.1.0"
description = "track-form classifier scaffold / библиотечный каркас классификатора в формате трека"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "torch>=2.1",
  "torchvision>=0.16",
  "pillow>=10.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
