[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grlnet"
version = "0.3.0"
description = "GRLNet/StabHRec40 compact recurrent image classifier for PyTorch"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "D. Yatsenko"},
  {name = "I. S. Petrushin"},
]
dependencies = [
  "torch>=2.1",
  "torchvision>=0.16",
  "pillow>=10.0",
  "pyyaml>=6.0",
  "numpy>=1.23",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/d-yacenko/GRLNet"
Repository = "https://github.com/d-yacenko/GRLNet"
Weights = "https://github.com/d-yacenko/GRLNet/releases/tag/v0.3.0"

[project.scripts]
grlnet-info = "grlnet.cli.info:main"
grlnet-predict = "grlnet.cli.predict:main"
grlnet-eval-imagenet = "grlnet.cli.eval_imagenet:main"
grlnet-train-imagenet = "grlnet.recipes.imagenet.train:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["grlnet*"]

[tool.setuptools.package-data]
grlnet = ["py.typed", "recipes/imagenet/configs/*.yaml"]
